style.css
/* ... */
.header-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #3e3c3c;
  padding: 15px;
  align-content: center;
  justify-content: center;
}

.website-name {
  display: flex;
  width: 40%;
  justify-content: flex-start;
}

.details a {
  text-decoration: none;
  color: #fff;
  align-self: center;
  font-family: 'Inter', sans-serif;
  font-weight: 700;
  font-size: 17px;
}

.website-name h1 a {
  font-family: 'Inter', sans-serif;
  text-decoration: none;
  font-size: 20px;
  font-weight: 700;
  color: #fff;
}

.navbar {
  display: flex;
  width: 40%;
  justify-content: flex-end;
  align-items: center;
}

.social-icons-desk li {
  list-style-type: none;
}

.navbar ul li {
  display: inline-block;
  list-style-type: none;
}

.navbar ul li a {
  color: #fff;
  font-size: 15px;
  font-family: 'Inter', sans-serif;
  padding: 8px 15px;
  text-decoration: none;
}

.tags ul li a {
  text-decoration: none;
  color: #091e42;
  padding: 10px 12px;
  border: 1px solid #8993a4;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
}

.card-tags ul li a {
  align-items: center;
  padding: 10px 12px;
  text-decoration: none;
  background: rgba(255, 255, 255, 0.24);
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  color: #fff;
}

.footer-social-icons ul li a {
  text-decoration: none;
  color: #505f79;
  font-size: 22px;
  margin: 0 9px;
}

.tags a:hover,
.card-tags a:hover {
  background-color: #d44e00;
  color: #fff;
}

.details a:hover {
  color: #d6c9c9;
}

.navbar ul li a:hover {
  color: #f55800;
}

.intro-container {
  display: flex;
  background-color: #1c1a19;
  align-content: center;
}

.social-icons-desk {
  display: flex;
  flex-direction: column !important;
  width: 6%;
  justify-content: center;
  align-items: center;
}

.social-icons-desk i {
  color: #cfcfcf;
  font-size: 22px;
  margin-bottom: 16px;
}

.intro {
  width: 50%;
  padding-left: 3%;
  box-sizing: border-box;
}

.intro h2 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 72px;
  line-height: 82px;
  letter-spacing: 0.37px;
  color: #ff6b00;
}

.intro h3 {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  display: flex;
  align-items: center;
  color: #fff5e1;
  margin: 15px 0;
}

.intro p {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  color: #fff;
  flex: none;
  order: 2;
  flex-grow: 0;
}

.recent-works {
  display: grid;
  padding: 8%;
  justify-content: center;
  padding-top: 100px !important;
}

.section-title {
  display: inline-grid;
  grid-column: 1;
  margin-bottom: 80px;
}

.section-title h4 {
  grid-column: 1;
  font-family: 'Crete Round', serif;
  font-weight: 400;
  font-size: 40px;
  color: #1c1a19;
}

.line {
  grid-column: 2/25;
  border-bottom: 1px solid #212121;
  align-self: center;
  margin-top: 8px;
}

.section-title .line {
  margin-top: 30px;
  margin-bottom: 25px;
}

.multi-post-stories {
  display: grid;
  grid-template-columns: 63% auto;
}

.stories-image img {
  max-width: 100%;
  height: auto;
}

.stories {
  display: flex;
  flex-direction: column;
}

.stories h5 {
  font-family: 'Crete Round', serif;
  font-weight: 400;
  font-size: 40px;
  display: flex;
  color: #091e42;
  order: 0;
}

.stories p {
  order: 1;
  width: 448px;
  height: 140px;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #091e42;
  margin-top: 25px;
  margin-bottom: 35px;
}

.tags {
  order: 2;
  margin-bottom: 35px;
}

.tags ul {
  display: flex;
  column-gap: 12px;
  flex-direction: row;
  box-sizing: border-box;
  list-style-type: none;
}

.details-button {
  order: 3;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  color: #fff;
  padding: 12px;
  background: #f55800;
  text-decoration: none;
  width: fit-content;
}

.details-button:hover {
  background: #d44e00;
}

.cards-container {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 30px 25px;
  margin-top: 30px;
}

.card h6 {
  font-family: 'Crete Round', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  color: #fff;
}

.card p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 17px;
  line-height: 24px;
  color: #fff;
}

.card-tags {
  margin-top: 30px;
}

.card-tags ul {
  display: flex;
}

.card-tags ul li {
  list-style-type: none;
  margin-right: 15px;
}

.details {
  display: flex;
  background-color: #ff6b00;
  justify-content: center;
  height: 48px;
  width: 100%;
}

.about-section {
  display: flex;
  flex-direction: column;
  background-color: #1c1a19;
  padding: 8% 0%;
  position: relative;
}

.about {
  display: flex;
  margin-left: 6%;
}

.about-details {
  display: flex;
  flex-direction: column;
  padding: 0 30px;
}

.about-details h2 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 71px;
  line-height: 88px;
  letter-spacing: 0.37px;
  color: #ff6b00;
  align-self: flex-start;
}

.about-details p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #f4f5f7;
  margin-top: 25px;
  margin-bottom: 40px;
}

.get-resume-button {
  text-decoration: none;
  color: #fff;
  align-items: center;
  padding: 12px;
  background: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 17px;
  text-align: center;
  width: fit-content;
}

.about-line {
  display: flex;
  width: 84%;
  margin: 0 auto;
  margin-top: 160px;
  margin-bottom: 120px;
  border-bottom: 1px solid #fff;
}
/* ... */

